--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "expressjs",
   "version": "1.0.0",
   "description": "learing ExpressJS",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "nodemon --inspect src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,9 +23,11 @@
   },
   "homepage": "https://github.com/Shodydosh/ExpressJS#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   }
 }
