--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "homepage": "https://github.com/Shodydosh/ExpressJS#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "sass": "^1.54.5"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
